--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,6 +1,6 @@
 services:
   db:
-    image: postgres
+    image: pgvector/pgvector:pg16
     restart: always
     environment:
       POSTGRES_USER: ${DB_USER:-postgres}
