--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "next": "15.1.7",
     "next-auth": "^4.24.11",
     "next-themes": "^0.4.4",
+    "openai": "^4.85.4",
     "pdf-parse": "^1.1.1",
     "pg": "^8.13.3",
     "react": "^19.0.0",
