--- a/example.env
+++ b/example.env
@@ -9,3 +9,4 @@ NEXTAUTH_SECRET=your-nextauth-secret-generate-one-with-openssl-rand-base64-32
 GITHUB_ID=github-client-id
 GITHUB_SECRET=github-client-secret
 OPENAI_API_KEY=open-api-key
+ELEVENLABS_API_KEY=your-elevenlabs-api-key
